--- a/Algorithm/Algorithm.ipynb
+++ b/Algorithm/Algorithm.ipynb
@@ -2186,8 +2186,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tasks that didn't had the deadline sensitivity or delay sensivity, had these values ​​in the table set to \"NAN\", so here we added the step of converting these to -1 as well."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2198,6 +2205,7 @@
     "        raise ValueError(\"episodes.csv must contain a 'Delta' column.\")\n",
     "    return float(episodes_df[\"Delta\"].iloc[0])\n",
     "\n",
+    "\n",
     "def _ensure_numeric_positive(name: str, arr: np.ndarray):\n",
     "    # Basic sanity: finite and no negatives for capacities/links\n",
     "    if not np.isfinite(arr).all():\n",
@@ -2205,46 +2213,53 @@
     "    if (arr < 0).any():\n",
     "        raise ValueError(f\"{name} contains negative values.\")\n",
     "\n",
+    "\n",
     "# ===== Alignment: per-dataset (one (episode, scenario) pack) =====\n",
     "def align_units_for_dataset(dataset: Dict[str, pd.DataFrame]) -> Dict[str, pd.DataFrame]:\n",
     "    \"\"\"\n",
-    "    Given one dataset dict {\"episodes\",\"agents\",\"arrivals\",\"tasks\"},\n",
+    "    Given one dataset dict {\"episodes\",\"arrivals\",\"tasks\"},\n",
     "    return a copy with aligned/derived columns (per-slot helpers).\n",
+    "\n",
+    "    Notes:\n",
+    "      - This version assumes MEC-based datasets (no agents.csv).\n",
+    "      - Deadline-related NaNs are replaced with -1 so that the\n",
+    "        final table is RL-friendly (no NaNs in deadline fields).\n",
     "    \"\"\"\n",
     "    episodes = dataset[\"episodes\"].copy()\n",
-    "    agents   = dataset[\"agents\"].copy()\n",
     "    arrivals = dataset[\"arrivals\"].copy()\n",
     "    tasks    = dataset[\"tasks\"].copy()\n",
     "\n",
     "    Delta = _get_delta(episodes)\n",
-    "\n",
-    "    # Agents: add per-slot compute capacity helper (cycles/slot)\n",
-    "    if \"f_local\" not in agents.columns:\n",
-    "        raise ValueError(\"agents.csv must contain 'f_local'.\")\n",
-    "    agents[\"f_local\"] = agents[\"f_local\"].astype(float)\n",
-    "    agents[\"f_local_slot\"] = agents[\"f_local\"] * Delta\n",
-    "\n",
-    "    # Memory is MB; keep as float\n",
-    "    if \"m_local\" in agents.columns:\n",
-    "        agents[\"m_local\"] = agents[\"m_local\"].astype(float)\n",
     "\n",
     "    # Tasks: ensure integer arrival slot\n",
     "    if \"t_arrival_slot\" not in tasks.columns:\n",
     "        raise ValueError(\"tasks.csv must contain 't_arrival_slot'.\")\n",
     "    tasks[\"t_arrival_slot\"] = tasks[\"t_arrival_slot\"].astype(int)\n",
     "\n",
-    "    # Build deadline_slots = ceil(deadline_s / Delta) when has_deadline == 1, else NaN\n",
+    "    # Compute deadline_slots (in slots) and replace missing deadlines with -1\n",
     "    if \"has_deadline\" in tasks.columns and \"deadline_s\" in tasks.columns:\n",
+    "        # Normalize types first\n",
+    "        tasks[\"has_deadline\"] = tasks[\"has_deadline\"].astype(int)\n",
+    "        tasks[\"deadline_s\"] = tasks[\"deadline_s\"].astype(\"float32\")\n",
+    "\n",
     "        def _to_deadline_slots(row):\n",
+    "            # only tasks with has_deadline == 1 and valid deadline_s\n",
     "            if int(row[\"has_deadline\"]) == 1 and np.isfinite(row[\"deadline_s\"]):\n",
     "                return int(math.ceil(float(row[\"deadline_s\"]) / Delta))\n",
-    "            return np.nan\n",
-    "        tasks[\"deadline_slots\"] = tasks.apply(_to_deadline_slots, axis=1)\n",
-    "        # Keep as nullable integer when possible\n",
-    "        try:\n",
-    "            tasks[\"deadline_slots\"] = tasks[\"deadline_slots\"].astype(\"Int64\")\n",
-    "        except Exception:\n",
-    "            pass\n",
+    "            # no deadline → use -1 sentinel\n",
+    "            return -1\n",
+    "\n",
+    "        tasks[\"deadline_slots\"] = tasks.apply(_to_deadline_slots, axis=1).astype(\"int32\")\n",
+    "\n",
+    "        # For tasks that effectively have no valid deadline, set -1 in deadline_s and deadline_time\n",
+    "        no_valid_deadline_mask = (tasks[\"has_deadline\"] == 0) | (~np.isfinite(tasks[\"deadline_s\"]))\n",
+    "\n",
+    "        tasks.loc[no_valid_deadline_mask, \"deadline_s\"] = -1.0\n",
+    "\n",
+    "        if \"deadline_time\" in tasks.columns:\n",
+    "            # deadline_time is absolute time; for 'no deadline' we also put -1\n",
+    "            tasks[\"deadline_time\"] = tasks[\"deadline_time\"].astype(\"float32\")\n",
+    "            tasks.loc[no_valid_deadline_mask, \"deadline_time\"] = -1.0\n",
     "\n",
     "    # Ensure key numeric task fields are floats\n",
     "    for col in [\"b_mb\", \"rho_cyc_per_mb\", \"c_cycles\", \"mem_mb\"]:\n",
@@ -2253,12 +2268,12 @@
     "\n",
     "    return {\n",
     "        \"episodes\": episodes,\n",
-    "        \"agents\":   agents,\n",
     "        \"arrivals\": arrivals,\n",
     "        \"tasks\":    tasks,\n",
     "    }\n",
     "\n",
-    "# ===== Verification: per-environment against a target Delta =====\n",
+    "\n",
+    "# ===== Alignment: per-environment against a target Delta =====\n",
     "def align_environment_units(environment: dict, target_Delta: float) -> dict:\n",
     "    \"\"\"\n",
     "    Take raw environment dict from load_environment_from_directory and\n",
@@ -2312,6 +2327,7 @@
     "\n",
     "    return env_aligned\n",
     "\n",
+    "\n",
     "# ===== Verification: per-topology against a target Delta =====\n",
     "def verify_topology_units(topology: Dict[str, Any], target_Delta: float) -> Tuple[bool, str]:\n",
     "    \"\"\"\n",
@@ -2349,6 +2365,7 @@
     "\n",
     "    return (True, \"topology verified (per-slot, consistent).\")\n",
     "\n",
+    "\n",
     "# ===== Batch alignment for ALL datasets (episode-first) & ALL topologies =====\n",
     "def align_all_units(\n",
     "    datasets_ep_first: Dict[str, Dict[str, Dict[str, pd.DataFrame]]],\n",
@@ -2360,10 +2377,10 @@
     "\n",
     "        {\n",
     "          \"ep_000\": {\n",
-    "             \"light\":   {\"episodes\": df, \"agents\": df, \"arrivals\": df, \"tasks\": df},\n",
+    "             \"light\":   {\"episodes\": df, \"arrivals\": df, \"tasks\": df},\n",
     "             \"moderate\":{...},\n",
     "             \"heavy\":   {...},\n",
-    "             \"_meta\":   {...}   # optional per-episode metadata (NO episodes/agents/tasks)\n",
+    "             \"_meta\":   {...}   # optional per-episode metadata (NO episodes/tasks)\n",
     "          },\n",
     "          \"ep_001\": {...}\n",
     "        }\n",
@@ -2371,14 +2388,16 @@
     "    Returns:\n",
     "        {\n",
     "          \"datasets_aligned\": { ep_name: { scenario: aligned_pack_or_meta, ... }, ... },\n",
-    "          \"topology_checks\":  { topo_name: { ep_name: { scenario: {ok, message} } } }\n",
+    "          \"topology_checks\":  { topo_name: { ep_name: { scenario: {ok, message} } } },\n",
+    "          \"environment_aligned\": dict,\n",
+    "          \"environment_Delta\": float\n",
     "        }\n",
     "    \"\"\"\n",
     "    out = {\n",
     "        \"datasets_aligned\": {},\n",
     "        \"topology_checks\":  {},\n",
     "        \"environment_aligned\": None,\n",
-    "        \"environment_Delta\": None, # for meta-data storing\n",
+    "        \"environment_Delta\": None,\n",
     "    }\n",
     "\n",
     "    # ---- 1) Align datasets (episode/scenario) ----\n",
@@ -2393,7 +2412,7 @@
     "                except Exception as e:\n",
     "                    raise RuntimeError(f\"[{ep_name}/{scenario}] dataset alignment failed: {e}\") from e\n",
     "            else:\n",
-    "                # For example \"_meta\" or anything else → we keep it as is (no changes)\n",
+    "                # For example \"_meta\" or anything else → keep as is\n",
     "                out[\"datasets_aligned\"][ep_name][scenario] = ds\n",
     "\n",
     "    # ---- 2) Infer a reference Delta for environment alignment ----\n",
@@ -2438,6 +2457,7 @@
     "\n",
     "    return out\n",
     "\n",
+    "\n",
     "# ===== Pretty printer =====\n",
     "def print_alignment_summary(result: Dict[str, Any]):\n",
     "    # ===== DATASETS =====\n",
@@ -2452,8 +2472,7 @@
     "\n",
     "            Delta    = _get_delta(ds[\"episodes\"])\n",
     "            n_tasks  = len(ds[\"tasks\"])\n",
-    "            n_agents = len(ds[\"agents\"])\n",
-    "            print(f\"[{ep_name}/{scenario}] Delta={Delta}  tasks={n_tasks}  agents={n_agents}\")\n",
+    "            print(f\"[{ep_name}/{scenario}] Delta={Delta}  tasks={n_tasks}\")\n",
     "\n",
     "    # ===== TOPOLOGIES =====\n",
     "    print(\"\\n=== TOPOLOGIES (checks vs each episode/scenario) ===\")\n",
@@ -2493,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2501,9 +2520,9 @@
      "output_type": "stream",
      "text": [
       "=== DATASETS (aligned, episode/scenario) ===\n",
-      "[ep_000/heavy] Delta=1.0  tasks=808  agents=18\n",
-      "[ep_000/light] Delta=1.0  tasks=66  agents=18\n",
-      "[ep_000/moderate] Delta=1.0  tasks=263  agents=18\n",
+      "[ep_000/heavy] Delta=1.0  tasks=7929\n",
+      "[ep_000/light] Delta=1.0  tasks=2008\n",
+      "[ep_000/moderate] Delta=1.0  tasks=4969\n",
       "\n",
       "=== TOPOLOGIES (checks vs each episode/scenario) ===\n",
       "Topology: clustered\n",
@@ -2529,11 +2548,18 @@
       "  cloud_capacity:              [30.]\n",
       "  cloud_capacity_per_slot:     [30.]\n",
       "\n",
-      " ===EXAMPLE===\n"
+      " ===EXAMPLE===\n",
+      "   task_id  mec_id  t_arrival_slot  deadline_s  deadline_slots\n",
+      "0        0       0               0    1.339893               2\n",
+      "1        1       0               0   -1.000000              -1\n",
+      "2        2       1               0   -1.000000              -1\n",
+      "3        3       3               0   -1.000000              -1\n",
+      "4        4       3               0   -1.000000              -1\n"
      ]
     }
    ],
    "source": [
+    "# ===== Example usage =====\n",
     "result_align = align_all_units(\n",
     "    datasets_ep_first=datasets,\n",
     "    topologies_by_name=topologies,\n",
@@ -2543,8 +2569,8 @@
     "\n",
     "print(\"\\n ===EXAMPLE===\")\n",
     "aligned_light_ep0 = result_align[\"datasets_aligned\"][\"ep_000\"][\"light\"]\n",
-    "agents_ep0_light  = aligned_light_ep0[\"agents\"]   # has f_local_slot\n",
-    "tasks_ep0_light   = aligned_light_ep0[\"tasks\"]    # has deadline_slots"
+    "tasks_ep0_light   = aligned_light_ep0[\"tasks\"]    # has deadline_slots\n",
+    "print(tasks_ep0_light[[\"task_id\", \"mec_id\", \"t_arrival_slot\", \"deadline_s\", \"deadline_slots\"]].head())"
    ]
   },
   {
