--- a/Algorithm/Algorithm.ipynb
+++ b/Algorithm/Algorithm.ipynb
@@ -2589,7 +2589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2600,7 +2600,7 @@
     "#   - all topologies\n",
     "#\n",
     "# For each (topology, episode, scenario) triple we build a \"bundle\" that contains:\n",
-    "#   - the aligned dataset (episodes, agents, arrivals, tasks)\n",
+    "#   - the aligned dataset (episodes, arrivals, tasks)\n",
     "#   - the topology (JSON + connection matrix)\n",
     "#   - the aligned environment (MEC + Cloud capacities)\n",
     "#\n",
@@ -2613,8 +2613,8 @@
     "#               'episode': <str>,\n",
     "#               'topology': <str>,\n",
     "#               'Delta': <float>,\n",
-    "#               'K': <int>,  # number_of_servers\n",
-    "#               'dataset': {episodes, agents, arrivals, tasks},\n",
+    "#               'K': <int>,  # number_of_servers (MECs)\n",
+    "#               'dataset': { 'episodes': df, 'arrivals': df, 'tasks': df },\n",
     "#               'topology_data': <dict>,\n",
     "#               'topology_meta_data': <dict or None>,\n",
     "#               'connection_matrix_df': <pd.DataFrame>,  # shape (K, K+1)\n",
@@ -2627,7 +2627,7 @@
     "#           }, ...\n",
     "#       }, ...\n",
     "#   }, ...\n",
-    "# \n",
+    "# }\n",
     "\n",
     "def _delta_from_episodes(episodes_df: pd.DataFrame) -> float:\n",
     "    \"\"\"Extract a single Delta value from episodes table.\"\"\"\n",
@@ -2635,12 +2635,14 @@
     "        raise ValueError(\"episodes.csv must contain a 'Delta' column.\")\n",
     "    return float(episodes_df[\"Delta\"].iloc[0])\n",
     "\n",
+    "\n",
     "def _topology_time_step(topo_json: Dict[str, Any]) -> float:\n",
     "    \"\"\"Extract the topology time_step from topology.json.\"\"\"\n",
     "    ts = topo_json.get(\"time_step\", None)\n",
     "    if ts is None:\n",
     "        raise ValueError(\"topology.json must contain 'time_step'.\")\n",
     "    return float(ts)\n",
+    "\n",
     "\n",
     "def build_topology_episode_pairs(\n",
     "    datasets_ep_first: Dict[str, Dict[str, Dict[str, Any]]],\n",
@@ -2658,10 +2660,10 @@
     "        Episode-first datasets, shape:\n",
     "        {\n",
     "          \"ep_000\": {\n",
-    "             \"light\":   {\"episodes\": df, \"agents\": df, \"arrivals\": df, \"tasks\": df},\n",
+    "             \"light\":   {\"episodes\": df, \"arrivals\": df, \"tasks\": df},\n",
     "             \"moderate\":{...},\n",
     "             \"heavy\":   {...},\n",
-    "             \"_meta\":   {...}  # metadata only (no episodes/agents/tasks)\n",
+    "             \"_meta\":   {...}  # metadata only (no episodes/arrivals/tasks)\n",
     "          },\n",
     "          ...\n",
     "        }\n",
@@ -2729,6 +2731,7 @@
     "        # Compare against every (episode, scenario)\n",
     "        for ep_name, scenarios in datasets_ep_first.items():\n",
     "            pairs_by_topology[topo_name][ep_name] = {}\n",
+    "\n",
     "            for scen_name, ds in scenarios.items():\n",
     "                # Skip metadata entries such as \"_meta\"\n",
     "                if not (isinstance(ds, dict) and \"episodes\" in ds):\n",
@@ -2761,11 +2764,11 @@
     "                    \"topology\": topo_name,\n",
     "                    \"Delta\": ds_Delta,\n",
     "                    \"K\": K,\n",
-    "                    \"dataset\": ds,\n",
+    "                    \"dataset\": ds,                         # aligned dataset (episodes/arrivals/tasks)\n",
     "                    \"topology_data\": topo_data,\n",
     "                    \"topology_meta_data\": meta_data,\n",
     "                    \"connection_matrix_df\": cm_df,\n",
-    "                    \"environment\": environment,   # same aligned environment for all pairs\n",
+    "                    \"environment\": environment,            # same aligned environment for all pairs\n",
     "                    \"checks\": {\n",
     "                        \"delta_match\": delta_ok,\n",
     "                        \"env_servers_match\": env_match_ok,\n",
@@ -2775,15 +2778,16 @@
     "\n",
     "    return pairs_by_topology\n",
     "\n",
+    "\n",
     "def print_pairs_summary_topology_first_ep(\n",
     "    pairs_by_topology: Dict[str, Dict[str, Dict[str, Any]]]\n",
     ") -> None:\n",
     "    \"\"\"\n",
     "    Pretty-print summary of pairs in the form:\n",
     "\n",
-    "        EPISODE -> TOPOLOGY -> SCENARIO\n",
+    "        TOPOLOGY -> EPISODE -> SCENARIO\n",
     "    \"\"\"\n",
-    "    print(\"=== EPISODE × TOPOLOGY × SCENARIO ===\")\n",
+    "    print(\"=== TOPOLOGY × EPISODE × SCENARIO ===\")\n",
     "    for topo_name, by_ep in pairs_by_topology.items():\n",
     "        print(f\"[TOPOLOGY] {topo_name}\")\n",
     "        for ep_name in sorted(by_ep.keys()):\n",
@@ -2805,14 +2809,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== EPISODE × TOPOLOGY × SCENARIO ===\n",
+      "=== TOPOLOGY × EPISODE × SCENARIO ===\n",
       "[TOPOLOGY] clustered\n",
       "  ├─ Episode: ep_000\n",
       "  │    - [OK] heavy     | K=20  Δ=1  -> OK\n",
@@ -2829,7 +2833,175 @@
       "  │    - [OK] light     | K=20  Δ=1  -> OK\n",
       "  │    - [OK] moderate  | K=20  Δ=1  -> OK\n",
       "\n",
-      " ===EXAMPLE===\n"
+      " ===EXAMPLE===\n",
+      "     scenario  episode_id  task_id  mec_id  t_arrival_slot  t_arrival_time  \\\n",
+      "0       light           0        0       0               0             0.0   \n",
+      "1       light           0        1       0               0             0.0   \n",
+      "2       light           0        2       1               0             0.0   \n",
+      "3       light           0        3       3               0             0.0   \n",
+      "4       light           0        4       3               0             0.0   \n",
+      "...       ...         ...      ...     ...             ...             ...   \n",
+      "2003    light           0     2003      15              99            99.0   \n",
+      "2004    light           0     2004      15              99            99.0   \n",
+      "2005    light           0     2005      15              99            99.0   \n",
+      "2006    light           0     2006      17              99            99.0   \n",
+      "2007    light           0     2007      17              99            99.0   \n",
+      "\n",
+      "      b_mb  rho_cyc_per_mb      c_cycles      mem_mb modality  has_deadline  \\\n",
+      "0      4.0    5.525261e+08  2.210105e+09   62.412148    video             1   \n",
+      "1      4.0    9.394101e+08  3.757640e+09   49.193645     text             0   \n",
+      "2      3.0    7.919350e+08  2.375805e+09   39.529118    video             0   \n",
+      "3      3.0    1.212347e+09  3.637042e+09   68.742000    video             0   \n",
+      "4      4.0    1.291461e+09  5.165844e+09   66.445540     text             0   \n",
+      "...    ...             ...           ...         ...      ...           ...   \n",
+      "2003   3.0    1.132626e+09  3.397878e+09   87.784890     text             0   \n",
+      "2004   3.0    9.731004e+08  2.919301e+09   48.441980   sensor             0   \n",
+      "2005   3.0    1.588940e+09  4.766821e+09   56.099064    video             0   \n",
+      "2006   5.0    1.246002e+09  6.230012e+09  103.991240    image             0   \n",
+      "2007   4.0    8.927368e+08  3.570947e+09   62.005756    image             0   \n",
+      "\n",
+      "      deadline_s  deadline_time  non_atomic  split_ratio action_space_hint  \\\n",
+      "0       1.339893       1.339893           1     0.424900        continuous   \n",
+      "1      -1.000000      -1.000000           0     0.000000          discrete   \n",
+      "2      -1.000000      -1.000000           0     0.000000          discrete   \n",
+      "3      -1.000000      -1.000000           0     0.000000          discrete   \n",
+      "4      -1.000000      -1.000000           0     0.000000          discrete   \n",
+      "...          ...            ...         ...          ...               ...   \n",
+      "2003   -1.000000      -1.000000           1     0.624287        continuous   \n",
+      "2004   -1.000000      -1.000000           0     0.000000          discrete   \n",
+      "2005   -1.000000      -1.000000           0     0.000000          discrete   \n",
+      "2006   -1.000000      -1.000000           1     0.550480        continuous   \n",
+      "2007   -1.000000      -1.000000           1     0.361228        continuous   \n",
+      "\n",
+      "      deadline_slots  \n",
+      "0                  2  \n",
+      "1                 -1  \n",
+      "2                 -1  \n",
+      "3                 -1  \n",
+      "4                 -1  \n",
+      "...              ...  \n",
+      "2003              -1  \n",
+      "2004              -1  \n",
+      "2005              -1  \n",
+      "2006              -1  \n",
+      "2007              -1  \n",
+      "\n",
+      "[2008 rows x 18 columns]\n",
+      "        mec_0  mec_1  mec_2  mec_3  mec_4  mec_5  mec_6  mec_7  mec_8  mec_9  \\\n",
+      "mec_0     0.0    3.0    3.0    3.0    3.0    3.0    3.0    0.0    0.0    0.0   \n",
+      "mec_1     3.0    0.0    3.0    3.0    3.0    3.0    3.0    0.0    0.0    0.0   \n",
+      "mec_2     3.0    3.0    0.0    3.0    3.0    3.0    3.0    0.0    0.0    0.0   \n",
+      "mec_3     3.0    3.0    3.0    0.0    3.0    3.0    3.0    0.0    0.0    0.0   \n",
+      "mec_4     3.0    3.0    3.0    3.0    0.0    3.0    3.0    0.0    0.0    0.0   \n",
+      "mec_5     3.0    3.0    3.0    3.0    3.0    0.0    3.0    0.0    0.0    0.0   \n",
+      "mec_6     3.0    3.0    3.0    3.0    3.0    3.0    0.0    0.0    0.0    0.0   \n",
+      "mec_7     0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    3.0    3.0   \n",
+      "mec_8     0.0    0.0    0.0    0.0    0.0    0.0    0.0    3.0    0.0    3.0   \n",
+      "mec_9     0.0    0.0    0.0    0.0    0.0    0.0    0.0    3.0    3.0    0.0   \n",
+      "mec_10    0.0    0.0    0.0    0.0    0.0    0.0    0.0    3.0    3.0    3.0   \n",
+      "mec_11    0.0    0.0    0.0    0.0    0.0    0.0    0.0    3.0    3.0    3.0   \n",
+      "mec_12    0.0    0.0    0.0    0.0    0.0    0.0    0.0    3.0    3.0    3.0   \n",
+      "mec_13    0.0    0.0    0.0    0.0    0.0    0.0    0.0    3.0    3.0    3.0   \n",
+      "mec_14    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+      "mec_15    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+      "mec_16    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+      "mec_17    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+      "mec_18    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+      "mec_19    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+      "\n",
+      "        ...  mec_11  mec_12  mec_13  mec_14  mec_15  mec_16  mec_17  mec_18  \\\n",
+      "mec_0   ...     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_1   ...     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_2   ...     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_3   ...     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_4   ...     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_5   ...     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_6   ...     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_7   ...     3.0     3.0     3.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_8   ...     3.0     3.0     3.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_9   ...     3.0     3.0     3.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_10  ...     3.0     3.0     3.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_11  ...     0.0     3.0     3.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_12  ...     3.0     0.0     3.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_13  ...     3.0     3.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
+      "mec_14  ...     0.0     0.0     0.0     0.0     3.0     3.0     3.0     3.0   \n",
+      "mec_15  ...     0.0     0.0     0.0     3.0     0.0     3.0     3.0     3.0   \n",
+      "mec_16  ...     0.0     0.0     0.0     3.0     3.0     0.0     3.0     3.0   \n",
+      "mec_17  ...     0.0     0.0     0.0     3.0     3.0     3.0     0.0     3.0   \n",
+      "mec_18  ...     0.0     0.0     0.0     3.0     3.0     3.0     3.0     0.0   \n",
+      "mec_19  ...     0.0     0.0     0.0     3.0     3.0     3.0     3.0     3.0   \n",
+      "\n",
+      "        mec_19  cloud  \n",
+      "mec_0      0.0    5.0  \n",
+      "mec_1      0.0    5.0  \n",
+      "mec_2      0.0    5.0  \n",
+      "mec_3      0.0    5.0  \n",
+      "mec_4      0.0    5.0  \n",
+      "mec_5      0.0    5.0  \n",
+      "mec_6      0.0    5.0  \n",
+      "mec_7      0.0    5.0  \n",
+      "mec_8      0.0    5.0  \n",
+      "mec_9      0.0    5.0  \n",
+      "mec_10     0.0    5.0  \n",
+      "mec_11     0.0    5.0  \n",
+      "mec_12     0.0    5.0  \n",
+      "mec_13     0.0    5.0  \n",
+      "mec_14     3.0    5.0  \n",
+      "mec_15     3.0    5.0  \n",
+      "mec_16     3.0    5.0  \n",
+      "mec_17     3.0    5.0  \n",
+      "mec_18     3.0    5.0  \n",
+      "mec_19     0.0    5.0  \n",
+      "\n",
+      "[20 rows x 21 columns]\n",
+      "{'servers_df':     Server ID  Private CPU Capacity  Public CPU Capacity  \\\n",
+      "0           0                   5.0                  5.0   \n",
+      "1           1                   5.0                  5.0   \n",
+      "2           2                   5.0                  5.0   \n",
+      "3           3                   5.0                  5.0   \n",
+      "4           4                   5.0                  5.0   \n",
+      "5           5                   5.0                  5.0   \n",
+      "6           6                   5.0                  5.0   \n",
+      "7           7                   5.0                  5.0   \n",
+      "8           8                   5.0                  5.0   \n",
+      "9           9                   5.0                  5.0   \n",
+      "10         10                   5.0                  5.0   \n",
+      "11         11                   5.0                  5.0   \n",
+      "12         12                   5.0                  5.0   \n",
+      "13         13                   5.0                  5.0   \n",
+      "14         14                   5.0                  5.0   \n",
+      "15         15                   5.0                  5.0   \n",
+      "16         16                   5.0                  5.0   \n",
+      "17         17                   5.0                  5.0   \n",
+      "18         18                   5.0                  5.0   \n",
+      "19         19                   5.0                  5.0   \n",
+      "\n",
+      "    Private CPU per_slot  Public CPU per_slot  \n",
+      "0                    5.0                  5.0  \n",
+      "1                    5.0                  5.0  \n",
+      "2                    5.0                  5.0  \n",
+      "3                    5.0                  5.0  \n",
+      "4                    5.0                  5.0  \n",
+      "5                    5.0                  5.0  \n",
+      "6                    5.0                  5.0  \n",
+      "7                    5.0                  5.0  \n",
+      "8                    5.0                  5.0  \n",
+      "9                    5.0                  5.0  \n",
+      "10                   5.0                  5.0  \n",
+      "11                   5.0                  5.0  \n",
+      "12                   5.0                  5.0  \n",
+      "13                   5.0                  5.0  \n",
+      "14                   5.0                  5.0  \n",
+      "15                   5.0                  5.0  \n",
+      "16                   5.0                  5.0  \n",
+      "17                   5.0                  5.0  \n",
+      "18                   5.0                  5.0  \n",
+      "19                   5.0                  5.0  , 'cloud_df':    id  computational_capacity  capacity_per_slot\n",
+      "0   0                    30.0               30.0, 'num_servers': 20, 'num_clouds': 1, 'private_cpu': array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5.,\n",
+      "       5., 5., 5.]), 'public_cpu': array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5.,\n",
+      "       5., 5., 5.]), 'cloud_capacity': array([30.]), 'private_cpu_slot': array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5.,\n",
+      "       5., 5., 5.]), 'public_cpu_slot': array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5., 5.,\n",
+      "       5., 5., 5.]), 'cloud_capacity_slot': array([30.])}\n"
      ]
     }
    ],
@@ -2858,12 +3030,15 @@
     "# Example access:\n",
     "#   - tasks for light scenario under fully_connected topology and ep_000\n",
     "tasks_light = pairs_by_topology[\"fully_connected\"][\"ep_000\"][\"light\"][\"dataset\"][\"tasks\"]\n",
+    "print(tasks_light)\n",
     "\n",
     "#   - connection matrix for clustered topology and heavy scenario, ep_000\n",
     "cm_clustered = pairs_by_topology[\"clustered\"][\"ep_000\"][\"heavy\"][\"connection_matrix_df\"]\n",
+    "print(cm_clustered)\n",
     "\n",
     "#   - aligned environment for the same pair\n",
-    "env_for_pair = pairs_by_topology[\"clustered\"][\"ep_000\"][\"heavy\"][\"environment\"]"
+    "env_for_pair = pairs_by_topology[\"clustered\"][\"ep_000\"][\"heavy\"][\"environment\"]\n",
+    "print(env_for_pair)"
    ]
   },
   {
